<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_assignment_50" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon" />

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/info_phone_number"
            app:layout_constraintEnd_toEndOf="@+id/txt_login"
            app:layout_constraintStart_toStartOf="@+id/txt_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_login" />


        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_left"
            android:padding="8dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            app:ccp_textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/etPhone"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone" />


        <EditText
            android:id="@+id/etPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/border_right"
            android:ems="10"
            android:hint="1234567890"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="15dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/ccp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ccp"
            app:layout_constraintTop_toTopOf="@+id/ccp" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20_dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="@dimen/margin_20_dp"
            android:paddingTop="@dimen/margin_20_dp"
            android:paddingBottom="@dimen/margin_20_dp"
            style="@style/PrimaryColoredButton"
            android:text="@string/send_otp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/etPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etPhone"
            app:layout_constraintTop_toTopOf="@+id/etPhone" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btnSend"
            app:layout_constraintEnd_toEndOf="@+id/btnSend"
            app:layout_constraintStart_toStartOf="@+id/btnSend"
            app:layout_constraintTop_toTopOf="@+id/btnSend" />


        <TextView
            android:id="@+id/txt_signup_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/signup_account"
            app:layout_constraintEnd_toStartOf="@+id/txt_signup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSend" />

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/signup_account_info"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txt_signup_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_signup_info"
            app:layout_constraintTop_toTopOf="@+id/txt_signup_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>