<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="@dimen/margin_10_dp"
            android:background="@drawable/custom_borderless_ripple"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_assignment_50" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tell_me_about"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_about"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="left"
            android:hint="@string/type_here"
            android:padding="@dimen/margin_10_dp"
            android:layout_margin="@dimen/margin_20_dp"
            android:background="@drawable/border"
            app:layout_constraintEnd_toEndOf="@+id/txt_login"
            app:layout_constraintStart_toStartOf="@+id/txt_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_login" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginStart="@dimen/margin_20_dp"
            android:layout_marginEnd="@dimen/margin_20_dp"
            android:paddingTop="@dimen/margin_20_dp"
            android:paddingBottom="@dimen/margin_20_dp"
            style="@style/PrimaryColoredButton"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/et_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/et_about"
            app:layout_constraintTop_toTopOf="@+id/et_about" />

        <TextView
            android:id="@+id/txt_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="30"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>