<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="@dimen/margin_10_dp"
            android:background="@drawable/custom_borderless_ripple"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_assignment_50" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30_dp"
            android:layout_marginEnd="@dimen/margin_30_dp"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30_dp"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:layout_marginEnd="@dimen/margin_30_dp"
            android:background="@drawable/border"
            android:padding="@dimen/margin_10_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30_dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/margin_30_dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30_dp"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:layout_marginEnd="@dimen/margin_30_dp"
            android:background="@drawable/border"
            android:inputType="textEmailAddress"
            android:padding="@dimen/margin_10_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />


        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_left"
            android:padding="8dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            app:ccp_textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/etPhone"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />


        <EditText
            android:id="@+id/etPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/border_right"
            android:ems="10"
            android:hint="1234567890"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="15dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/ccp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ccp"
            app:layout_constraintTop_toTopOf="@+id/ccp" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20_dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="@dimen/margin_20_dp"
            android:paddingTop="@dimen/margin_20_dp"
            android:paddingBottom="@dimen/margin_20_dp"
            style="@style/PrimaryColoredButton"
            android:text="@string/send_otp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/etPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etPhone"
            app:layout_constraintTop_toTopOf="@+id/etPhone" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btnSend"
            app:layout_constraintEnd_toEndOf="@+id/btnSend"
            app:layout_constraintStart_toStartOf="@+id/btnSend"
            app:layout_constraintTop_toTopOf="@+id/btnSend" />


        <TextView
            android:id="@+id/txt_signup_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_account"
            app:layout_constraintEnd_toStartOf="@+id/txt_signup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSend" />

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/login_account_info"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txt_signup_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_signup_info"
            app:layout_constraintTop_toTopOf="@+id/txt_signup_info" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

